--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Владислав Пономарев - Веб разработчик</title>
+    <link rel="stylesheet" href="assets">
+    <style>
+        body {
+            text-align: center;
+        }
+
+        body figure img {
+            max-height: 50vh;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Хотите Сайт?</h1>
+<h2>Или может быть, что-то кроме сайта?)</h2>
+<p>Если у вас есть безумная идея, или вы хотите что-то по истине уникальное, то вы нашли подходящего человека!</p>
+<figure><img src="/assets/img/Salem.jpg">
+    <figcaption>Иногда, со стороны я выгляжу вот так</figcaption>
+</figure>
+<p>Все потому, что я получаю колоссальное удавольствие в процессе создания крутых инновационных проектов!</p>
 </body>
 </html>
