--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         body figure img {
             max-height: 50vh;
         }
+
+        body p {
+            font-size: 1.2rem;
+        }
     </style>
 </head>
 <body>
