--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Владислав Пономарев - Веб разработчик</title>
-    <link rel="stylesheet" href="assets">
+    <link rel="stylesheet" href="/assets/css/main.css">
     <style>
         body {
             text-align: center;
