--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Владислав Пономарев - Веб разработчик</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#FFFFFF"/>
     <link rel="stylesheet" href="/assets/css/main.css">
     <style>
         body {
