--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             text-align: center;
         }
 
+        body figure {
+            max-width: 100%;
+        }
+
         body figure img {
             max-height: 50vh;
         }
