--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <style>
         body {
             text-align: center;
+            padding: 2rem;
+            width: calc(100vw - 4rem);
+            height: calc(100vh - 4rem);
         }
 
         body figure {
