--- a/index.html
+++ b/index.html
@@ -25,15 +25,38 @@
         body p {
             font-size: 1.2rem;
         }
+
+        nav {
+            display: flex;
+            justify-content: space-around;
+            min-width: 50%;
+        }
+
+        section {
+            margin: 2rem 0;
+        }
     </style>
 </head>
 <body>
 <h1>Хотите Сайт?</h1>
 <h2>Или может быть, что-то кроме сайта?)</h2>
 <p>Если у вас есть безумная идея, или вы хотите что-то по истине уникальное, то вы нашли подходящего человека!</p>
+<nav>
+    <a href="https://github.com/PonomareVlad">GitHub</a>
+</nav>
 <figure><img src="/assets/img/Salem.jpg">
     <figcaption>Иногда, со стороны я выгляжу вот так</figcaption>
 </figure>
 <p>Все потому, что я получаю колоссальное удавольствие в процессе создания крутых инновационных проектов!</p>
+<section>
+    <h3>Свяжитесь со мной</h3>
+    <p>Любым удобным способом, если хотите чтобы ваш проект делали с таким же выражением лица)</p>
+    <nav>
+        <a href="https://t.me/PonomareVlad">Telegram</a>
+        <a href="https://www.facebook.com/PonomareVlad">FaceBook</a>
+        <a href="https://moikrug.ru/system-core">Мой Круг</a>
+        <a href="https://vk.com/ponomarevlad">ВКонтакте</a>
+    </nav>
+</section>
 </body>
 </html>
