Elements position fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             text-align: center;
             padding: 2rem;
             width: calc(100vw - 4rem);
-            height: calc(100vh - 4rem);
+            height: auto;
         }
 
         body figure {
@@ -28,12 +28,16 @@
 
         nav {
             display: flex;
-            justify-content: space-around;
-            min-width: 50%;
+            justify-content: center;
+            width: 100%;
+        }
+
+        nav > * {
+            margin: 0 1rem;
         }
 
         section {
-            margin: 2rem 0;
+            padding: 2rem 0;
         }
     </style>
 </head>
