Anchors style upd

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
             height: auto;
         }
 
+        a {
+            color: inherit;
+            text-decoration-style: dotted;
+            -webkit-text-decoration-style: dotted;
+        }
+
+        a:hover {
+            text-decoration-style: solid;
+            -webkit-text-decoration-style: solid;
+        }
+
+        a:visited {
+            color: #999;
+        }
+
         body figure {
             max-width: 100%;
         }
@@ -34,6 +49,10 @@
 
         nav > * {
             margin: 0 1rem;
+        }
+
+        nav > a {
+            font-size: 1.4rem;
         }
 
         section {
