--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
         section {
             padding: 2rem 0;
         }
+
+        @media (max-width: 678px) {
+            body figure img {
+                max-height: none;
+            }
+        }
     </style>
 </head>
 <body>
