--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
         }
 
         @media (max-width: 678px) {
+            body {
+                padding: 2rem 0;
+                width: 100vh;
+            }
+
+            body > * {
+                margin-left: 2rem;
+                margin-right: 2rem;
+            }
+
             body figure img {
                 max-height: none;
             }
