--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         @media (max-width: 678px) {
             body {
                 padding: 2rem 0;
-                width: 100vh;
+                width: 100vw;
             }
 
             body > * {
