Adaptive positions fix

--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
             body figure img {
                 max-height: none;
             }
+
+            nav {
+                width: calc(100% - 4rem);
+            }
+
+            nav {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                width: 100%;
+            }
+
+            nav > * {
+                line-height: 2rem;
+            }
         }
     </style>
 </head>
