--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
                 max-height: none;
             }
 
+            nav {
+                flex-direction: column;
+            }
+
             body > nav {
                 width: calc(100% - 4rem);
-                flex-direction: column;
             }
 
             nav > * {
