--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
         section {
             padding: 2rem 0;
+            position: relative;
         }
 
         @media (max-width: 678px) {
@@ -74,7 +75,7 @@
                 max-height: none;
             }
 
-            nav {
+            body > nav {
                 width: calc(100% - 4rem);
                 flex-direction: column;
             }
