--- a/index.html
+++ b/index.html
@@ -94,20 +94,20 @@
 <h2>Или может быть, что-то кроме сайта?)</h2>
 <p>Если у вас есть безумная идея, или вы хотите что-то по истине уникальное, то вы нашли подходящего человека!</p>
 <nav>
-    <a href="https://github.com/PonomareVlad">GitHub</a>
+    <a href="https://github.com/PonomareVlad" target="_blank">GitHub</a>
 </nav>
 <figure><img src="/assets/img/Salem.jpg">
     <figcaption>Иногда, со стороны я выгляжу вот так</figcaption>
 </figure>
 <p>Все потому, что я получаю колоссальное удавольствие в процессе создания крутых инновационных проектов!</p>
 <section>
-    <h3>Свяжитесь со мной</h3>
+    <h2>Свяжитесь со мной</h2>
     <p>Любым удобным способом, если хотите чтобы ваш проект делали с таким же выражением лица)</p>
     <nav>
-        <a href="https://t.me/PonomareVlad">Telegram</a>
-        <a href="https://www.facebook.com/PonomareVlad">FaceBook</a>
-        <a href="https://moikrug.ru/system-core">Мой Круг</a>
-        <a href="https://vk.com/ponomarevlad">ВКонтакте</a>
+        <a href="https://t.me/PonomareVlad" target="_blank">Telegram</a>
+        <a href="https://www.facebook.com/PonomareVlad" target="_blank">FaceBook</a>
+        <a href="https://moikrug.ru/system-core" target="_blank">Мой Круг</a>
+        <a href="https://vk.com/ponomarevlad" target="_blank">ВКонтакте</a>
     </nav>
 </section>
 </body>
