--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 </figure>
 <p>Все потому, что я получаю колоссальное удавольствие в процессе создания крутых инновационных проектов!</p>
 <section>
-    <h3>Свяжитесь со мной</h3>
+    <h2>Свяжитесь со мной</h2>
     <p>Любым удобным способом, если хотите чтобы ваш проект делали с таким же выражением лица)</p>
     <nav>
-        <a href="https://t.me/PonomareVlad">Telegram</a>
-        <a href="https://www.facebook.com/PonomareVlad">FaceBook</a>
-        <a href="https://moikrug.ru/system-core">Мой Круг</a>
-        <a href="https://vk.com/ponomarevlad">ВКонтакте</a>
+        <a href="https://t.me/PonomareVlad" target="_blank">Telegram</a>
+        <a href="https://www.facebook.com/PonomareVlad" target="_blank">FaceBook</a>
+        <a href="https://moikrug.ru/system-core" target="_blank">Мой Круг</a>
+        <a href="https://vk.com/ponomarevlad" target="_blank">ВКонтакте</a>
     </nav>
 </section>
 </body>
