Open Graph support

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>Владислав Пономарев - Веб разработчик</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#FFFFFF"/>
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="Владислав Пономарев">
+    <meta property="og:url" content="https://PonomareVlad.ru">
+    <meta property="og:image" content="https://ponomarevlad.ru/assets/img/pic.jpeg">
+    <meta property="profile:first_name" content="Владислав">
+    <meta property="profile:last_name" content="Пономарев">
     <link rel="stylesheet" href="/assets/css/main.css">
     <style>
         body {
