JSON-LD Support

--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
             }
         }
     </style>
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org/",
+        "@type": "Person",
+        "name": "Владислав Пономарёв",
+        "jobTitle": "Веб Разработчик",
+        "address":
+        {
+            "@type": "PostalAddress",
+            "addressLocality": "Екатеринбург",
+            "addressRegion": "Свердловская область"
+        }
+    }
+
+    </script>
 </head>
 <body>
 <h1>Хотите Сайт?</h1>
