--- a/amp/index.html
+++ b/amp/index.html
@@ -2,7 +2,6 @@
 <html ⚡>
 <head>
     <meta charset="utf-8">
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
     <title>Hello AMP world</title>
     <link rel="canonical" href="/index.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -148,6 +147,22 @@
             }
         }
     </style>
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org/",
+        "@type": "Person",
+        "name": "Владислав Пономарёв",
+        "jobTitle": "Веб Разработчик",
+        "address":
+        {
+            "@type": "PostalAddress",
+            "addressLocality": "Екатеринбург",
+            "addressRegion": "Свердловская область"
+        }
+    }
+
+    </script>
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
 <h1>Хотите Сайт?</h1>
