--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:image" content="https://ponomarevlad.ru/assets/img/pic.jpeg">
     <meta property="profile:first_name" content="Владислав">
     <meta property="profile:last_name" content="Пономарев">
+    <link rel="amphtml" href="/amp/">
     <link rel="stylesheet" href="/assets/css/main.css">
     <style>
         body {
