--- a/amp/index.html
+++ b/amp/index.html
@@ -5,6 +5,13 @@
     <title>Hello AMP world</title>
     <link rel="canonical" href="/index.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name="theme-color" content="#FFFFFF"/>
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="Владислав Пономарев">
+    <meta property="og:url" content="https://PonomareVlad.ru">
+    <meta property="og:image" content="https://ponomarevlad.ru/assets/img/pic.jpeg">
+    <meta property="profile:first_name" content="Владислав">
+    <meta property="profile:last_name" content="Пономарев">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
         body {
@@ -114,7 +121,7 @@
     <a href="https://github.com/PonomareVlad" target="_blank">GitHub</a>
 </nav>
 <figure>
-    <amp-img src="/assets/img/Salem.jpg"
+    <amp-img src="https://PonomareVlad.ru/assets/img/Salem.jpg"
              width="1024" height="400" layout="responsive"></amp-img>
     <figcaption>Иногда, со стороны я выгляжу вот так</figcaption>
 </figure>
