--- a/amp/index.html
+++ b/amp/index.html
@@ -14,6 +14,72 @@
     <meta property="profile:last_name" content="Пономарев">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 300;
+            src: local('SF UI Display Light'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-display-light-58646b33e0551.woff') format('woff');
+        }
+
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 500;
+            src: local('SF UI Display Medium'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-display-medium-58646be638f96.woff') format('woff');
+        }
+
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 100;
+            src: local('SF UI Display Thin'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-display-thin-58646e9b26e8b.woff') format('woff');
+        }
+
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 200;
+            src: local('SF UI Display Ultralight'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-display-ultralight-58646b19bf205.woff') format('woff');
+        }
+
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 700;
+            src: local('SF UI Display Bold'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-display-bold-58646a511e3d9.woff') format('woff');
+        }
+
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 600;
+            src: local('SF UI Display Semibold'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-display-semibold-58646eddcae92.woff') format('woff');
+        }
+
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 300;
+            src: local('SF UI Text Light'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-text-light-5864714f67240.woff') format('woff');
+        }
+
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 400;
+            src: local('SF UI Text Regular'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-text-regular-58646b56a688c.woff') format('woff');
+        }
+
+        html, body {
+            color: #444;
+            font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', "Helvetica Neue", "Lucida Grande", Helvetica, Arial, sans-serif;
+            font-weight: 300;
+            text-align: center;
+            width: 100vw;
+            margin: 0;
+            padding: 0;
+            position: relative;
+        }
         body {
             text-align: center;
             padding: 2rem;
