--- a/amp/index.html
+++ b/amp/index.html
@@ -2,7 +2,7 @@
 <html ⚡>
 <head>
     <meta charset="utf-8">
-    <title>Hello AMP world</title>
+    <title>Владислав Пономарев - Веб разработчик</title>
     <link rel="canonical" href="/index.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta name="theme-color" content="#FFFFFF"/>
