--- a/amp/index.html
+++ b/amp/index.html
@@ -12,7 +12,65 @@
     <meta property="og:image" content="https://ponomarevlad.ru/assets/img/pic.jpeg">
     <meta property="profile:first_name" content="Владислав">
     <meta property="profile:last_name" content="Пономарев">
-    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+    <style amp-boilerplate>body {
+        -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        animation: -amp-start 8s steps(1, end) 0s 1 normal both
+    }
+
+    @-webkit-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-moz-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-ms-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-o-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }</style>
+    <noscript>
+        <style amp-boilerplate>body {
+            -webkit-animation: none;
+            -moz-animation: none;
+            -ms-animation: none;
+            animation: none
+        }</style>
+    </noscript>
     <style amp-custom>
         @font-face {
             font-family: 'San Francisco';
@@ -80,6 +138,7 @@
             padding: 0;
             position: relative;
         }
+
         body {
             text-align: center;
             padding: 2rem;
@@ -176,6 +235,7 @@
         }
     }
 
+
     </script>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
@@ -188,7 +248,7 @@
 </nav>
 <figure>
     <amp-img src="https://PonomareVlad.ru/assets/img/Salem.jpg"
-             width="1024" height="400" layout="responsive"></amp-img>
+             width="1024" height="768" layout="responsive"></amp-img>
     <figcaption>Иногда, со стороны я выгляжу вот так</figcaption>
 </figure>
 <p>Все потому, что я получаю колоссальное удавольствие в процессе создания крутых инновационных проектов!</p>
