--- a/amp/index.html
+++ b/amp/index.html
@@ -12,65 +12,7 @@
     <meta property="og:image" content="https://ponomarevlad.ru/assets/img/pic.jpeg">
     <meta property="profile:first_name" content="Владислав">
     <meta property="profile:last_name" content="Пономарев">
-    <style amp-boilerplate>body {
-        -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-        -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-        -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-        animation: -amp-start 8s steps(1, end) 0s 1 normal both
-    }
-
-    @-webkit-keyframes -amp-start {
-        from {
-            visibility: hidden
-        }
-        to {
-            visibility: visible
-        }
-    }
-
-    @-moz-keyframes -amp-start {
-        from {
-            visibility: hidden
-        }
-        to {
-            visibility: visible
-        }
-    }
-
-    @-ms-keyframes -amp-start {
-        from {
-            visibility: hidden
-        }
-        to {
-            visibility: visible
-        }
-    }
-
-    @-o-keyframes -amp-start {
-        from {
-            visibility: hidden
-        }
-        to {
-            visibility: visible
-        }
-    }
-
-    @keyframes -amp-start {
-        from {
-            visibility: hidden
-        }
-        to {
-            visibility: visible
-        }
-    }</style>
-    <noscript>
-        <style amp-boilerplate>body {
-            -webkit-animation: none;
-            -moz-animation: none;
-            -ms-animation: none;
-            animation: none
-        }</style>
-    </noscript>
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
         @font-face {
             font-family: 'San Francisco';
@@ -138,7 +80,6 @@
             padding: 0;
             position: relative;
         }
-
         body {
             text-align: center;
             padding: 2rem;
@@ -234,7 +175,6 @@
             "addressRegion": "Свердловская область"
         }
     }
-
 
     </script>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
