--- a/amp/index.html
+++ b/amp/index.html
@@ -119,7 +119,7 @@
         "@context": "http://schema.org/",
         "@type": "Person",
         "name": "Владислав Пономарёв",
-        "jobTitle": "Веб Разработчик",
+        "jobTitle": "Веб разработчик с 6-и летним опытом",
         "address":
         {
             "@type": "PostalAddress",
