--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Владислав Пономарев - Веб разработчик</title>
+    <meta name="description" content="Веб разработчик с 6-и летним опытом">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#FFFFFF"/>
     <meta property="og:type" content="profile">
@@ -100,7 +101,7 @@
         "@context": "http://schema.org/",
         "@type": "Person",
         "name": "Владислав Пономарёв",
-        "jobTitle": "Веб Разработчик",
+        "jobTitle": "Веб разработчик с 6-и летним опытом",
         "address":
         {
             "@type": "PostalAddress",
@@ -108,6 +109,7 @@
             "addressRegion": "Свердловская область"
         }
     }
+
 
 
     </script>
