--- a/parallax.demo.html
+++ b/parallax.demo.html
@@ -3,32 +3,30 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
-    <title>parallax demo</title>
+    <title>Parallax demo</title>
     <link href="parallax.demo.css" rel="stylesheet">
 </head>
 
 <body>
 
-
 <div class="parallax">
     <div class="parallax__group" id="group4">
-        <div class="parallax__layer parallax__layer--base"
-             style="background-image: url(parallax.demo/bottom-cloud.png); background-repeat: no-repeat; background-size: contain; background-position: bottom center;">
-        </div>
-        <div class="parallax__layer parallax__layer--back"
-             style="background-image: url(parallax.demo/clouds.png); background-repeat: no-repeat; background-size: contain; background-position: bottom center;">
-        </div>
-        <div class="parallax__layer parallax__layer--deep"
-             style="background-color: white;background-image: url(parallax.demo/mountains.jpg); background-repeat: no-repeat; background-size: contain; background-position: bottom center;">
-
-        </div>
+        <div class="parallax__layer parallax-bottom-cloud"></div>
+        <div class="parallax__layer parallax-right-cloud"></div>
+        <div class="parallax__layer parallax-clouds"></div>
+        <div class="parallax__layer parallax-clouds-space"></div>
+        <div class="parallax__layer parallax-single-cloud"></div>
+        <div class="parallax__layer parallax-background-mountains"></div>
+        <!--<div style="width: 100%; height: 100%; display: flex;flex-direction: column;justify-content: center;align-items: center">
+            <h1>Добро пожаловть!</h1>
+        </div>-->
     </div>
     <div class="parallax__group">
-        <div class="parallax__layer parallax__layer--base" style="min-height: 100vh; background: white">
+        <div class="overflow-bottom-cloud">
+            <h1>Содержимое страницы</h1>
         </div>
     </div>
 </div>
-
 
 </body>
 </html>
