--- a/index.html
+++ b/index.html
@@ -1,131 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Владислав Пономарев - Веб разработчик</title>
-    <meta name="description" content="Веб разработчик с 6-и летним опытом">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#FFFFFF"/>
-    <meta property="og:type" content="profile">
-    <meta property="og:title" content="Владислав Пономарев">
-    <meta property="og:url" content="https://PonomareVlad.ru">
-    <meta property="og:image" content="https://ponomarevlad.ru/assets/img/pic.jpeg">
-    <meta property="profile:first_name" content="Владислав">
-    <meta property="profile:last_name" content="Пономарев">
-    <link rel="amphtml" href="/amp/">
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <style>
-        body {
-            text-align: center;
-            padding: 2rem;
-            width: calc(100vw - 4rem);
-            height: auto;
-        }
-
-        a {
-            color: inherit;
-            text-decoration-style: dotted;
-            -webkit-text-decoration-style: dotted;
-        }
-
-        a:hover {
-            text-decoration-style: solid;
-            -webkit-text-decoration-style: solid;
-        }
-
-        a:visited {
-            color: #999;
-        }
-
-        body figure {
-            max-width: 100%;
-        }
-
-        body figure img {
-            max-height: 50vh;
-            max-width: 100%;
-        }
-
-        body p {
-            font-size: 1.2rem;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
-
-        nav > * {
-            margin: 0 1rem;
-        }
-
-        nav > a {
-            font-size: 1.4rem;
-        }
-
-        section {
-            padding: 2rem 0;
-            position: relative;
-        }
-
-        @media (max-width: 678px) {
-            body {
-                padding: 2rem 0;
-                width: 100vw;
-            }
-
-            body > * {
-                margin-left: 2rem;
-                margin-right: 2rem;
-            }
-
-            body figure img {
-                max-height: none;
-            }
-
-            nav {
-                flex-direction: column;
-            }
-
-            body > nav {
-                width: calc(100% - 4rem);
-            }
-
-            nav > * {
-                line-height: 2rem;
-            }
-        }
-    </style>
-    <script type="application/ld+json">
-    {
-        "@context": "http://schema.org/",
-        "@type": "Person",
-        "name": "Владислав Пономарёв",
-        "jobTitle": "Веб разработчик с 6-и летним опытом",
-        "address":
-        {
-            "@type": "PostalAddress",
-            "addressLocality": "Екатеринбург",
-            "addressRegion": "Свердловская область"
-        }
-    }
-
-
-
-    </script>
+    <meta charset="UTF-8">
+    <title>Владислав Пономарев</title>
 </head>
 <body>
-<h1>Привет!</h1>
-<h2>Меня зовут Влад, и я снова решил переработать этот сайт :]</h2>
-<section>
-    <h2>Если вы хотите больше узнать обо мне:</h2>
-    <nav>
-        <a href="https://github.com/PonomareVlad" target="_blank">GitHub</a>
-        <a href="https://t.me/PonomareVlad" target="_blank">Telegram</a>
-        <a href="https://www.facebook.com/PonomareVlad" target="_blank">FaceBook</a>
-        <a href="https://moikrug.ru/system-core" target="_blank">Мой Круг</a>
-        <a href="https://vk.com/ponomarevlad" target="_blank">ВКонтакте</a>
-    </nav>
-</section>
+<h1>То самое чувство...</h1>
+<h2>Когда ты хочешь сделать что ни будь Шикарное, и не можешь решить, с чего же начать...</h2>
 </body>
 </html>
