--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Владислав Пономарев</title>
+    <style>:root {
+        font-family: -apple-system, sans-serif;
+    }
+
+    h1, h2 {
+        font-weight: 200
+    }</style>
 </head>
 <body>
 <h1>То самое чувство...</h1>
