--- a/amp/index.html
+++ b/amp/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html ⚡>
 <head>
+    <meta charset="utf-8">
     <title>Владислав Пономарев - Веб разработчик</title>
-    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <link href="/index.html" rel="canonical">
+    <meta content="width=device-width,minimum-scale=1,initial-scale=1" name="viewport">
     <meta content="#FFFFFF" name="theme-color"/>
     <meta content="profile" property="og:type">
     <meta content="Владислав Пономарев" property="og:title">
@@ -10,9 +12,85 @@
     <meta content="https://ponomarevlad.ru/assets/img/pic.jpeg" property="og:image">
     <meta content="Владислав" property="profile:first_name">
     <meta content="Пономарев" property="profile:last_name">
-    <link href="/amp/" rel="amphtml">
-    <link href="/assets/css/main.css" rel="stylesheet">
-    <style>
+    <style amp-boilerplate>body {
+        -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        animation: -amp-start 8s steps(1, end) 0s 1 normal both
+    }
+
+    @-webkit-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-moz-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-ms-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-o-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }</style>
+    <noscript>
+        <style amp-boilerplate>body {
+            -webkit-animation: none;
+            -moz-animation: none;
+            -ms-animation: none;
+            animation: none
+        }</style>
+    </noscript>
+    <style amp-custom>
+
+        @font-face {
+            font-family: 'San Francisco';
+            font-style: normal;
+            font-weight: 300;
+            src: local('SF UI Text Light'), url('https://ponomarevlad.ru/assets/fonts/sf-ui-text-light-5864714f67240.woff') format('woff');
+        }
+
+        html, body {
+            color: #444;
+            font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', "Helvetica Neue", "Lucida Grande", Helvetica, Arial, sans-serif;
+            font-weight: 300;
+            text-align: center;
+            width: 100vw;
+            margin: 0;
+            padding: 0;
+            position: relative;
+        }
+
         body {
             text-align: center;
             padding: 2rem;
@@ -39,7 +117,7 @@
             max-width: 100%;
         }
 
-        body figure img {
+        body figure amp-img {
             max-height: 50vh;
             max-width: 100%;
         }
@@ -78,7 +156,7 @@
                 margin-right: 2rem;
             }
 
-            body figure img {
+            body figure amp-img {
                 max-height: none;
             }
 
@@ -100,7 +178,7 @@
             "@context": "http://schema.org/",
             "@type": "Person",
             "name": "Владислав Пономарёв",
-            "jobTitle": "Веб Разработчик",
+            "jobTitle": "Веб разработчик с 6-и летним опытом",
             "address": {
                 "@type": "PostalAddress",
                 "addressLocality": "Екатеринбург",
@@ -108,8 +186,8 @@
             }
         }
 
-
     </script>
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
 <h1>Хотите Сайт?</h1>
@@ -118,7 +196,9 @@
 <nav>
     <a href="https://github.com/PonomareVlad" target="_blank">GitHub</a>
 </nav>
-<figure><img src="/assets/img/Salem.jpg">
+<figure>
+    <amp-img height="768"
+             layout="responsive" src="https://PonomareVlad.ru/assets/img/Salem.jpg" width="1024"></amp-img>
     <figcaption>Иногда, со стороны я выгляжу вот так</figcaption>
 </figure>
 <p>Все потому, что я получаю колоссальное удавольствие в процессе создания крутых инновационных проектов!</p>
