--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Владислав Пономарев</title>
+    <title>Владислав Пономарев - Разработчик Веб-приложений</title>
+    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+          name="viewport">
     <link href="assets/css/base.css" rel="stylesheet">
+    <link href="https://PonomareVlad.ru" rel="canonical">
+    <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
+    <meta content="telephone=no" name="format-detection">
 </head>
-<body>
+<body ontouchstart=””>
 <header>
     <figure>
         <figcaption class="avatar">👨🏻‍💻</figcaption>
     </figure>
     <div class="profile">
-        <h1 class="title">Владислав Пономарев</h1>
-        <h2 class="caption">Разработчик Веб-приложений</h2>
+        <h1 class="title">Владислав Пономарев<br><span class="caption">Разработчик Веб-приложений</span></h1>
     </div>
 </header>
 <main class="menu">
-    <a href="">Мои работы<br><span>🛠 🧪 🏗 👶🏻 🖥 🖼 🖱</span></a>
-    <a href="">Мои проекты<br><span>🛰 🚀 🌐 🦈 📢</span></a>
-    <a href="">Оставить заявку</a>
+    <a href="https://github.com/PonomareVlad?tab=repositories">Мои работы<br><span>🛠 🧪 🏗 👶🏻 🖥 🖼 🖱</span></a>
+    <a href="https://github.com/PonomareVlad?tab=repositories">Мои проекты<br><span>🛰 🚀 🌐 🦈 📢</span></a>
+    <a href="mailto:work@ponomarevlad.ru">Оставить заявку</a>
 </main>
 <footer>
-    <a href="#" title="GitHub"><img alt="GitHub" src="assets/img/github.svg"></a>
-    <a href="#" title="Twitter"><img alt="Twitter" src="assets/img/twitter.svg"></a>
-    <a href="#" title="FaceBook"><img alt="FaceBook" src="assets/img/facebook.svg"></a>
-    <a href="#" title="LinkedIn"><img alt="LinkedIn" src="assets/img/linkedin.svg"></a>
-    <a href="#" title="Telegram"><img alt="Telegram" src="assets/img/send.svg"></a>
+    <a href="https://github.com/PonomareVlad" title="GitHub"><img alt="GitHub" src="assets/img/github.svg"></a>
+    <a href="https://twitter.com/PonomareVlad" title="Twitter"><img alt="Twitter" src="assets/img/twitter.svg"></a>
+    <a href="https://www.facebook.com/PonomareVlad" title="FaceBook"><img alt="FaceBook" src="assets/img/facebook.svg"></a>
+    <a href="https://www.linkedin.com/in/ponomarevlad" title="LinkedIn"><img alt="LinkedIn"
+                                                                             src="assets/img/linkedin.svg"></a>
+    <a href="tg://resolve?domain=PonomareVlad" title="Telegram"><img alt="Telegram" src="assets/img/send.svg"></a>
 </footer>
 </body>
 </html>
