Disabled scroll final

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="telephone=no" name="format-detection">
 </head>
-<body onload="document.ontouchmove = function(e){ e.preventDefault(); }">
+<body ontouchmove="" ontouchstart="">
 <header>
     <figure>
         <figcaption class="avatar">👨🏻‍💻</figcaption>
