--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="telephone=no" name="format-detection">
 </head>
-<body ontouchmove="" ontouchstart="">
+<body ontouchmove="return false" ontouchstart="return false">
 <header>
     <figure>
         <figcaption class="avatar">👨🏻‍💻</figcaption>
