Desktop version prototype

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Владислав Пономарев - Разработчик Веб-приложений</title>
+    <title>👨🏻‍💻 Владислав Пономарев - Разработчик Веб-приложений</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
           name="viewport">
     <link href="assets/css/base.css" rel="stylesheet">
@@ -10,7 +10,7 @@
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="telephone=no" name="format-detection">
 </head>
-<body ontouchmove="return false" ontouchstart="">
+<body>
 <header>
     <figure>
         <figcaption class="avatar">👨🏻‍💻</figcaption>
@@ -19,18 +19,21 @@
         <h1 class="title">Владислав Пономарев<br><span class="caption">Разработчик Веб-приложений</span></h1>
     </div>
 </header>
-<main class="menu">
-    <a href="https://github.com/PonomareVlad?tab=repositories">Мои работы<br><span>🛠 🧪 🏗 👶🏻 🖥 🖼 🖱</span></a>
-    <a href="https://github.com/PonomareVlad?tab=repositories">Мои проекты<br><span>🛰 🚀 🌐 🦈 📢</span></a>
-    <a href="mailto:work@ponomarevlad.ru">Оставить заявку</a>
+<main>
+    <nav class="menu">
+        <a class="works-link" href="https://github.com/PonomareVlad?tab=repositories&q=freelance">Мои работы</a>
+        <a class="projects-link" href="https://github.com/PonomareVlad?tab=repositories">Мои проекты</a>
+        <a href="mailto:work@ponomarevlad.ru">Оставить заявку</a>
+    </nav>
 </main>
 <footer>
-    <a href="https://github.com/PonomareVlad" title="GitHub"><img alt="GitHub" src="assets/img/github.svg"></a>
-    <a href="https://twitter.com/PonomareVlad" title="Twitter"><img alt="Twitter" src="assets/img/twitter.svg"></a>
-    <a href="https://www.facebook.com/PonomareVlad" title="FaceBook"><img alt="FaceBook" src="assets/img/facebook.svg"></a>
-    <a href="https://www.linkedin.com/in/ponomarevlad" title="LinkedIn"><img alt="LinkedIn"
-                                                                             src="assets/img/linkedin.svg"></a>
-    <a href="tg://resolve?domain=PonomareVlad" title="Telegram"><img alt="Telegram" src="assets/img/send.svg"></a>
+    <nav class="icons">
+        <a class="github" href="https://github.com/PonomareVlad" title="GitHub"></a>
+        <a class="twitter" href="https://twitter.com/PonomareVlad" title="Twitter"></a>
+        <a class="facebook" href="https://www.facebook.com/PonomareVlad" title="FaceBook"></a>
+        <a class="linkedin" href="https://www.linkedin.com/in/ponomarevlad" title="LinkedIn"></a>
+        <a class="telegram" href="tg://resolve?domain=PonomareVlad" title="Telegram"></a>
+    </nav>
 </footer>
 </body>
 </html>
