Added icon and OG meta

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <title>👨🏻‍💻 Владислав Пономарев - Разработчик Веб-приложений</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
           name="viewport">
-    <link href="assets/css/base.css" rel="stylesheet">
-    <link href="https://PonomareVlad.ru" rel="canonical">
-    <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
+    <link href="/assets/css/base.css" rel="stylesheet">
+    <link href="/assets/img/icon.png" rel="icon" type="image/png"/>
+    <link href="/assets/img/icon.png" rel="apple-touch-icon">
     <meta content="telephone=no" name="format-detection">
+    <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
+    <meta content="profile" property="og:type">
+    <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="og:title">
+    <meta content="https://PonomareVlad.ru" property="og:url">
+    <meta content="/assets/img/pic.jpeg" property="og:image">
+    <link href="https://PonomareVlad.ru" rel="canonical">
 </head>
 <body>
 <header>
