--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="og:title">
     <meta content="https://PonomareVlad.ru" property="og:url">
     <meta content="/assets/img/pic.jpeg" property="og:image">
+    <meta content="Владислав" property="profile:first_name">
+    <meta content="Пономарев" property="profile:last_name">
     <link href="https://PonomareVlad.ru" rel="canonical">
 </head>
 <body>
