Header icon updated

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>👨🏻‍💻 Владислав Пономарев - Разработчик Веб-приложений</title>
+    <title>Владислав Пономарев - Разработчик Веб-приложений</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
           name="viewport">
     <link href="/assets/css/base.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 <body>
 <header>
     <figure>
-        <figcaption class="avatar">👨🏻‍💻</figcaption>
+        <figcaption class="avatar"></figcaption>
     </figure>
     <div class="profile">
         <h1 class="title">Владислав Пономарев<br><span class="caption">Разработчик Веб-приложений</span></h1>
