--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="profile" property="og:type">
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="og:title">
-    <meta content="https://PonomareVlad.ru" property="og:url">
-    <meta content="/assets/img/pic.jpeg" property="og:image">
     <meta content="Владислав" property="profile:first_name">
     <meta content="Пономарев" property="profile:last_name">
+    <meta content="https://PonomareVlad.ru" property="og:url">
+    <meta content="https://PonomareVlad.ru/assets/img/pic.jpeg" property="og:image">
     <link href="https://PonomareVlad.ru" rel="canonical">
 </head>
 <body>
