--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta content="telephone=no" name="format-detection">
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="profile" property="og:type">
-    <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="og:title">
+    <meta content="Владислав Пономарев" property="og:title">
+    <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="og:description">
     <meta content="Владислав" property="profile:first_name">
     <meta content="Пономарев" property="profile:last_name">
     <meta content="https://PonomareVlad.ru" property="og:url">
