--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Владислав Пономарев - Разработчик Веб-приложений</title>
+    <title>Владислав Пономарев</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
           name="viewport">
     <link href="/assets/css/base.css" rel="stylesheet">
