--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Владислав Пономарев</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
           name="viewport">
-    <link href="/assets/css/base.css" rel="stylesheet">
-    <link href="/assets/img/icon.png" rel="icon" type="image/png"/>
-    <link href="/assets/img/icon.png" rel="apple-touch-icon">
+    <link href="assets/css/base.css" rel="stylesheet">
+    <link href="assets/img/icon.png" rel="icon" type="image/png"/>
+    <link href="assets/img/icon.png" rel="apple-touch-icon">
     <meta content="telephone=no" name="format-detection">
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="profile" property="og:type">
