Added AMP Version

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta content="https://PonomareVlad.ru" property="og:url">
     <meta content="https://PonomareVlad.ru/assets/img/pic.jpeg" property="og:image">
     <link href="https://PonomareVlad.ru" rel="canonical">
+    <link href="https://PonomareVlad.ru/amp/" rel="amphtml">
 </head>
 <body>
 <header>
