--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="assets/css/base.css" rel="stylesheet">
     <link href="assets/img/icon.png" rel="icon" type="image/png"/>
     <link href="assets/img/icon.png" rel="apple-touch-icon">
+    <meta content="#47378E" name="theme-color">
     <meta content="telephone=no" name="format-detection">
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="profile" property="og:type">
@@ -16,7 +17,7 @@
     <meta content="Владислав" property="profile:first_name">
     <meta content="Пономарев" property="profile:last_name">
     <meta content="https://PonomareVlad.ru" property="og:url">
-    <meta content="https://PonomareVlad.ru/assets/img/pic.jpeg" property="og:image">
+    <meta content="https://PonomareVlad.ru/assets/img/poster.png" property="og:image">
     <link href="https://PonomareVlad.ru" rel="canonical">
     <link href="https://PonomareVlad.ru/amp/" rel="amphtml">
 </head>
