--- a/amp/index.html
+++ b/amp/index.html
@@ -2,11 +2,23 @@
 <html ⚡>
 <head>
     <meta charset="utf-8">
-    <title>My AMP Page</title>
-    <base href="/">
-    <link href="https://PonomareVlad.ru/" rel="canonical"/>
+    <title>Владислав Пономарев</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
           name="viewport">
+    <base href="/">
+    <link href="assets/img/icon.png" rel="icon" type="image/png"/>
+    <link href="assets/img/icon.png" rel="apple-touch-icon">
+    <meta content="#47378E" name="theme-color">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
+    <meta content="profile" property="og:type">
+    <meta content="Владислав Пономарев" property="og:title">
+    <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="og:description">
+    <meta content="Владислав" property="profile:first_name">
+    <meta content="Пономарев" property="profile:last_name">
+    <meta content="https://PonomareVlad.ru" property="og:url">
+    <meta content="https://PonomareVlad.ru/assets/img/poster.png" property="og:image">
+    <link href="https://PonomareVlad.ru/" rel="canonical"/>
     <style amp-boilerplate>body {
         -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
         -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
