--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta content="Пономарев" property="profile:last_name">
     <meta content="https://PonomareVlad.ru" property="og:url">
     <meta content="https://PonomareVlad.ru/assets/img/poster.png" property="og:image">
+    <meta content="https://PonomareVlad.ru/assets/img/poster.png" property="twitter:card">
     <link href="https://PonomareVlad.ru" rel="canonical">
     <link href="https://PonomareVlad.ru/amp/" rel="amphtml">
 </head>
