Updated Meta for Twitter Cards

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <link href="assets/img/icon.png" rel="apple-touch-icon">
     <meta content="#47378E" name="theme-color">
     <meta content="telephone=no" name="format-detection">
-    <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="profile" property="og:type">
+    <meta content="summary_large_image" property="twitter:card">
     <meta content="Владислав Пономарев" property="og:title">
+    <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="og:description">
     <meta content="Владислав" property="profile:first_name">
     <meta content="Пономарев" property="profile:last_name">
     <meta content="https://PonomareVlad.ru" property="og:url">
+    <meta content="PonomareVlad.ru" property="og:site_name">
+    <meta content="@PonomareVlad" property="twitter:site">
+    <meta content="@PonomareVlad" property="twitter:creator">
     <meta content="https://PonomareVlad.ru/assets/img/poster.png" property="og:image">
-    <meta content="https://PonomareVlad.ru/assets/img/poster.png" property="twitter:card">
+    <meta content="https://PonomareVlad.ru/assets/img/poster.png" property="twitter:image">
     <link href="https://PonomareVlad.ru" rel="canonical">
     <link href="https://PonomareVlad.ru/amp/" rel="amphtml">
 </head>
