Updated Meta for Twitter Cards

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta content="Владислав Пономарев" property="og:title">
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" name="description">
     <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="og:description">
+    <meta content="Владислав Пономарев - Разработчик Веб-приложений" property="twitter:description">
     <meta content="Владислав" property="profile:first_name">
     <meta content="Пономарев" property="profile:last_name">
     <meta content="https://PonomareVlad.ru" property="og:url">
