Updated styles for iOS Safari

--- a/amp/index.html
+++ b/amp/index.html
@@ -97,7 +97,7 @@
             /*overflow: hidden;*/
 
             background-color: rgb(71, 55, 142);
-            background-image: url("assets/img/100. Chetwode Blue.png");
+            background-image: url("assets/img/background.png");
             background-repeat: no-repeat;
             background-position: center;
             background-size: 100% 100%;
