--- a/amp/index.html
+++ b/amp/index.html
@@ -316,8 +316,8 @@
 </header>
 <main>
     <nav class="menu">
-        <a class="works-link" href="https://github.com/PonomareVlad?tab=repositories&q=freelance">Мои работы</a>
-        <a class="projects-link" href="https://github.com/PonomareVlad?tab=repositories">Мои проекты</a>
+        <a class="" href="https://freelance.habr.com/freelancers/PonomarevStudio">Портфолио</a>
+        <a class="" href="https://career.habr.com/ponomarevlad">Резюме</a>
         <a href="mailto:work@ponomarevlad.ru">Оставить заявку</a>
     </nav>
 </main>
