--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 <main>
     <nav class="menu">
         <a class="" href="https://career.habr.com/ponomarevlad">Резюме</a>
-        <a class="" href="https://freelance.habr.com/freelancers/PonomarevStudio">Портфолио</a>
-        <a href="mailto:work@ponomarevlad.ru">Оставить заявку</a>
+        <a href="mailto:work@ponomarevlad.ru">📧 Оставить заявку</a>
     </nav>
 </main>
 <footer>
