--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 </header>
 <main>
     <nav class="menu">
-        <a class="" href="https://career.habr.com/ponomarevlad">Резюме</a>
-        <a href="mailto:work@ponomarevlad.ru">📧 Оставить заявку</a>
+        <a href="https://career.habr.com/ponomarevlad">Резюме → 📝</a>
+        <a href="mailto:work@ponomarevlad.ru">Оставить заявку → 📧</a>
     </nav>
 </main>
 <footer>
