--- a/amp/index.html
+++ b/amp/index.html
@@ -316,9 +316,8 @@
 </header>
 <main>
     <nav class="menu">
-        <a class="" href="https://career.habr.com/ponomarevlad">Резюме</a>
-        <a class="" href="https://freelance.habr.com/freelancers/PonomarevStudio">Портфолио</a>
-        <a href="mailto:work@ponomarevlad.ru">Оставить заявку</a>
+        <a href="https://career.habr.com/ponomarevlad">Резюме → 📝</a>
+        <a href="mailto:work@ponomarevlad.ru">Оставить заявку → 📧</a>
     </nav>
 </main>
 <footer>
