--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <main>
     <nav class="menu">
         <a href="https://career.habr.com/ponomarevlad">Резюме → 📝</a>
-        <a href="mailto:work@ponomarevlad.ru">Оставить заявку → 📧</a>
+        <a href="https://Ponomarev.Studio">Наша студия → 👨🏻‍💻</a>
     </nav>
 </main>
 <footer>
