--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <main>
     <nav class="menu">
         <a href="https://career.habr.com/ponomarevlad">Резюме → 📝</a>
-        <a href="https://Ponomarev.Studio">Студия → 🚀</a>
+        <a href="https://Ponomarev.Studio">Портфолио → 🚀</a>
     </nav>
 </main>
 <footer>
