--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@
     <div><img alt="" src="https://mc.yandex.ru/watch/44190509" style="position:absolute; left:-9999px;"/></div>
 </noscript>
 <!-- /Yandex.Metrika counter -->
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e324109076e3481c9f75d367ec33fcc2"}'></script>
+<!-- End Cloudflare Web Analytics -->
 </body>
 </html>
